--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "email-templates": "^10.0.1",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20"
+    "nodemailer": "^6.8.0",
+    "nodemon": "^2.0.20",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.6"
   }
 }
